# fortran-python-integration

./: .gitignore  CMakeLists.txt  README.md  setup.py
python/: __init__.py  cli.py  ode_solver.py
src/: exponential_decay.f90  main.f90  rk4.f90
tests/: test_solver.py
